<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_M10"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="57dp"
        android:text="@string/Text_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivImg10"
        app:layout_constraintTop_toBottomOf="@+id/btn_M9"
        app:layout_constraintVertical_bias="0.526" />

    <ImageView
        android:id="@+id/ivImg2"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintEnd_toStartOf="@+id/ivImg3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivImg6"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_M3"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivImg4"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        app:layout_constraintEnd_toStartOf="@+id/ivImg5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_M1"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivImg7"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_M4"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_M4"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/Text_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImg4" />

    <ImageView
        android:id="@+id/ivImg10"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_M8"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_M8"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="11dp"
        android:text="@string/Text_btn"
        app:layout_constraintStart_toEndOf="@+id/btn_M7"
        app:layout_constraintTop_toBottomOf="@+id/ivImg8" />

    <Button
        android:id="@+id/btn_M1"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="@string/Text_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImg1" />

    <Button
        android:id="@+id/btn_M9"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Text_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_M8"
        app:layout_constraintTop_toBottomOf="@+id/ivImg9" />

    <Button
        android:id="@+id/btn_M7"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/Text_btn"
        app:layout_constraintEnd_toStartOf="@+id/btn_M8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImg7" />

    <Button
        android:id="@+id/btn_M3"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:text="@string/Text_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImg3" />

    <Button
        android:id="@+id/btn_M2"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/Text_btn"
        app:layout_constraintEnd_toStartOf="@+id/btn_M3"
        app:layout_constraintStart_toEndOf="@+id/btn_M1"
        app:layout_constraintTop_toBottomOf="@+id/ivImg2" />

    <ImageView
        android:id="@+id/ivImg8"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toEndOf="@+id/ivImg7"
        app:layout_constraintTop_toBottomOf="@+id/btn_M5"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_M5"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:text="@string/Text_btn"
        app:layout_constraintStart_toEndOf="@+id/btn_M4"
        app:layout_constraintTop_toBottomOf="@+id/ivImg5" />

    <ImageView
        android:id="@+id/ivImg9"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivImg8"
        app:layout_constraintTop_toBottomOf="@+id/btn_M6"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivImg5"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintEnd_toStartOf="@+id/ivImg6"
        app:layout_constraintTop_toBottomOf="@+id/btn_M2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_M6"
        android:layout_width="113dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/Text_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_M5"
        app:layout_constraintTop_toBottomOf="@+id/ivImg6" />

    <ImageView
        android:id="@+id/ivImg3"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/ivImg1"
        android:layout_width="101dp"
        android:layout_height="87dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        app:layout_constraintEnd_toStartOf="@+id/ivImg2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/InstruccionA1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/SaludoA1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

</androidx.constraintlayout.widget.ConstraintLayout>